--- a/styles.css
+++ b/styles.css
@@ -203,7 +203,7 @@ body {
 
   .article{
     width: 70px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     height: 70px;
     background-size: cover;
     border-radius: 5%;
@@ -228,9 +228,10 @@ body {
   .review{
     width: 250px;
     border-radius:2%;
+    background-position: center;
   }
   .review_article1{
-    background-image: url('./nanoscale_logo.jpg');
+    background-image: url('./Nanoscale_article.jpeg');
   }  
   .review_article2{
     background-image: url('./CSR.jpeg');
@@ -270,6 +271,26 @@ body {
 
 }
 
+
+@media only screen and (max-width: 992px){
+    .article{
+        width: 50px;
+        height: 50px;
+      }
+    .article.review{
+        width: 70px;
+        height: 70px;
+      }
+
+    .writing_panel {
+        padding-left: 5px;
+
+    } 
+    .writing_panel.expanded {
+        flex: 4;
+        font-size: 25px;
+      }
+}
 
 @media only screen and (max-width: 600px) {
     .panel p {
