fixing image position

--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ body {
 }
 .panel3{
     background-image: url('./marjanblan-ADfPdLBMeY8-unsplash.jpg');
-    background-position: 50vh;
+    background-position: center;
 }
 .panel4{
     background-image: url('./marjanblan-ADfPdLBMeY8-unsplash.jpg');
