--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,19 @@ body {
         justify-content: center;
     }
 
+/* Hero (texType) section */
+    .hero {
+      min-height: 3rem;
+      text-align: center;
+    }
+
+    .cursor{
+      color: chartreuse;
+      font-weight: bold;
+      font-size: 30px;
+      font-family: 'Courier New', Courier, monospace;
+    }
+
 /* About section */
     
     .about_text{
@@ -49,6 +62,12 @@ body {
 
     .text-box{
         width: 80%;
+        background-color: black;
+    }
+
+    p.text-box{
+        color: white;
+        padding: 0 20px 10px 20px;
     }
 
     #linkedIn{
