--- a/styles.css
+++ b/styles.css
@@ -320,3 +320,14 @@ body {
     }
   }
 
+@media only screen and (max-width: 820px) and (max-height: 420px){
+  .text-box{
+    width: 100%;
+  }
+
+  .about_text{
+    height: 125vh;
+  }
+  
+}
+
