--- a/styles.css
+++ b/styles.css
@@ -331,3 +331,28 @@ body {
   
 }
 
+
+
+@media only screen and (max-width: 325px) and (max-height: 570px){
+
+  .text-box{
+    width: 100%;
+  }
+
+  .about_text{
+    height: 120vh;
+  }
+
+}
+
+@media only screen and (max-width: 285px) and (max-height: 660px){
+
+  .text-box{
+    width: 100%;
+  }
+
+  .about_text{
+    height: 120vh;
+  }
+
+}
