--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ body {
 
     p.text-box{
         color: white;
+        line-height: 1.95em;
         padding: 0 20px 10px 20px;
     }
 
@@ -332,10 +333,18 @@ body {
       }
 }
 
+@media only screen and (max-width: 770px){
+  p.text-box{
+    max-height: 300px;
+    overflow: scroll;
+  }
+}
+
 @media only screen and (max-width: 600px) {
     .panel p {
       font-size: 1em;
     }
+
   }
 
 @media only screen and (max-width: 820px) and (max-height: 420px){
